--- a/src/toy.css
+++ b/src/toy.css
@@ -173,7 +173,7 @@
     border: 0px solid black;
     display: flex;
     justify-content: center;
-    background-image: url("C:\Users\hp\Desktop\React Project\my-app\src\headpic.png");
+    background-image: url("C:\Users\hp\Desktop\React Project\my-app\src\blackscreencodewithhand.jpg");
     background-size: cover;
 }
 .modii{
